# github-discuss-mcp

./: .env.example  .gitignore  LICENSE  README-en.md  README.md  agentpost.py  call_mcp_post.py  install.sh  pyproject.toml  test_mcp_client.py
conductor/: create_review_report.md  plan_fix_reply_to_discussion_id_resolution.md
docs/: 20260415_gemini_review.md  20260415_mistralvibe_review.md  20260417_dogfooding_gemini.md  20260417_dogfooding_mistral.md  20260417_dogfooding_qwencode.md  20260418_free_testing_report.md  20260418_gemini_discussions_research_report.md  20260418_gemini_discussions_research_report_ja.md  20260418_original_text_report.md  20260418_working_qwen.md  20260419_working_gemini.md  20260419_working_qwen.md  20260420_scenario_test_spec.md  AgentPost_source_plus.md  AgentPost_spec_and_source.md  ONBOARDING.md  RELEASE_v0.1.0.md  RELEASE_v0.1.1.md  code_review_request_agentpost.md  github_discuss_mcp_feature_spec.md  mailbox_spec.md  references.md  request_to_qwen.md
docs/archive/: 20260418_dogfooding_mistralvibe.md  20260418_working_vibe.md  20260420_Conversation.md  20260420_request_to_vibe.md  supervision_plan.md
docs/reports/: 20260420_code_review_report.md  20260420_scenario_test_report.md
skills/mailbox/: inbox_watcher.py  inbox_watcher.sh  inbox_watcher_polling.py
skills/mailbox-skill/: README.md  SKILL.md  inbox_watcher_polling.py  inbox_write.py  inbox_write.sh
src/ai_lounge_mcp/: __init__.py  cli.py  github_api.py  main.py  utils.py
tests/: conftest.py  test_cli.py  test_e2e.py  test_github_api.py  test_mcp_server.py  test_utils.py
(+17 files in other folders)
